# WioUmweltMonitor

./: README.md  licence.txt
3DModels/: 60degree.123dx  60degree.stl  SensorBase.123dx  SensorBase.stl  WioUnderCover_left.stl  WioUnderCover_right.123dx  WioUnderCover_right.stl
wio_umwelt_monitor/: Cargo.toml
wio_umwelt_monitor/bm1383aglv/: Cargo.toml
wio_umwelt_monitor/bm1383aglv/src/: lib.rs
wio_umwelt_monitor/scd30/: Cargo.toml
wio_umwelt_monitor/scd30/src/: lib.rs
wio_umwelt_monitor/src/: main.rs  viewer.rs
